--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -166,7 +166,7 @@
 <li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
 <li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
 <li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
 <li class="nav-item mr-0"><a href="nail-panitration.html" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
 </ul>
 </li>
@@ -299,7 +299,7 @@
 <li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
 <li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
 <li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
 <li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
 </ul>
 </li>
@@ -381,15 +381,14 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="temperature-test-chamber.html" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <a href="#" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
             <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="temperature-test-chamber.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -398,15 +397,14 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="humidity-tester.html" title="Humidity Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
+        <a href="#" title="Humidity Tester in India"><img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Humidity Tester</h5>
             <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="humidity-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -415,15 +413,14 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="vibration-tester.html" title="Vibration Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <a href="#" title="Vibration Tester in India"><img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Vibration Tester</h5>
             <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="vibration-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -435,15 +432,14 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="explosion-chambers.html" title="Explosion Chambers in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Explosion Chambers in India" title="Explosion Chambers in India"></a>
+        <a href="#" title="Explosion Proof Chambers in India"><img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Explosion Chambers</h5>
+            <h5 class="card-title">Explosion Proof Chambers</h5>
             <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring capacity performance, safety, and quality validation for various consumer applications.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="explosion-chambers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -451,15 +447,14 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="nail-panitration.html" title="Nail Panitration in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
+        <a href="#" title="Nail Panitration in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Nail Panitration</h5>
             <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise IR, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="nail-panitration.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
