--- a/welding-machines.html
+++ b/welding-machines.html
@@ -168,7 +168,7 @@
 <li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
 <li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
 <li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Chambers</a></li>
+<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
 <li class="nav-item mr-0"><a href="nail-panitration.html" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
 </ul>
 </li>
@@ -305,7 +305,7 @@
 <li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
 <li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
 <li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Chambers">Explosion Chambers</a></li>
+<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
 <li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
 </ul>
 </li>
