--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -167,7 +167,7 @@
 <li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
 <li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
 <li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
-<li class="nav-item mr-0"><a href="nail-panitration.html" title="Nail Panitration" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Nail Panitration</a></li>
+<li class="nav-item mr-0"><a href="nail-panitration.html" title="Cycling Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cycling Test Chamber</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
@@ -300,7 +300,7 @@
 <li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
 <li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
 <li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
-<li><a href="nail-panitration.html" title="Nail Panitration">Nail Panitration</a></li>
+<li><a href="nail-panitration.html" title="Cycling Test Chamber">Cycling Test Chamber</a></li>
 </ul>
 </li>
 <li>
@@ -385,7 +385,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
-            <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
+            <p class="card-text text-muted">Temperature test chambers ensure lithium battery safety and reliability by simulating extreme temperature conditions. They evaluate battery performance, aging, and thermal stability under controlled heating and cooling cycles, essential for quality assurance and compliance with international testing standards.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -401,7 +401,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Humidity Tester</h5>
-            <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
+            <p class="card-text text-muted">Humidity test chambers assess lithium battery durability and safety under varying humidity conditions. They simulate real-world moisture exposure to evaluate insulation, corrosion resistance, and performance stability, ensuring battery reliability and compliance with environmental testing standards.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -417,7 +417,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Vibration Tester</h5>
-            <p class="card-text text-muted">Indygreen provides 3kW, 4kW, and 6kW Laser Welding Machines for prismatic battery packs, ensuring precise, efficient, and durable welds with advanced technology for consistent performance and production reliability.</p>
+            <p class="card-text text-muted">Vibration test chambers evaluate lithium battery structural integrity and performance under simulated transportation and operational vibrations. They help identify mechanical weaknesses, ensuring durability, safety, and compliance with international vibration testing standards.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -436,7 +436,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Explosion Proof Chambers</h5>
-            <p class="card-text text-muted">Accurate and reliable Cell Testers for lithium-ion cells, ensuring capacity performance, safety, and quality validation for various consumer applications.</p>
+            <p class="card-text text-muted">Explosion-proof chambers safely test lithium batteries under extreme conditions, containing explosions or thermal runaways to protect operators and ensure accurate performance and safety evaluations.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -447,11 +447,11 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Nail Panitration in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Nail Panitration in India" title="Nail Panitration in India"></a>
+        <a href="#" title="Cycling Test Chamber in India"><img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Nail Panitration</h5>
-            <p class="card-text text-muted">Advanced Sorting Machines for lithium-ion batteries, enabling precise IR, voltage, and quality sorting to ensure uniformity and reliability in various consumer battery packs.</p>
+            <h5 class="card-title">Cycling Test Chamber</h5>
+            <p class="card-text text-muted">Cycling test chambers evaluate lithium battery life and performance by repeatedly charging and discharging cells under controlled conditions, ensuring durability, efficiency, and long-term reliability.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
