--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -174,7 +174,7 @@
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
-<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -187,7 +187,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -312,7 +312,7 @@
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
-<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+<li><a href="bms-tester.html" title="BMS">BMS</a></li>
 </ul>
 </li>
 <li>
@@ -432,10 +432,10 @@
     <!-- Card 3 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS Testers"><img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India"></a>
+        <a href="#" title="BMSs"><img src="img/bms-tester.png" title="BMSs in India" class="card-img-top product-img" alt="BMSs in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">BMS Testers</h5>
+            <h5 class="card-title">BMSs</h5>
             <p class="card-text text-muted">High-precision BMS testers for battery performance testing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -486,7 +486,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/DEMO.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
+        <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab"><img src="img/battery-test-quality-lab.png" class="card-img-top product-img" alt="Battery Quality Test Lab in India" title="Battery Quality Test Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Quality Test Lab</h5>
@@ -507,7 +507,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-battery-raw-material.html" title="Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
+        <a href="lithium-battery-raw-material.html" title="Raw Materials in India"><img src="img/lithium-battery-raw-material.png" class="card-img-top product-img" alt="Raw Materials in India" title="Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
@@ -523,11 +523,11 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/DEMO.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
+        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/bess-cooling.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Cooling System</h5>
-            <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
+            <p class="card-text text-muted">We provide BESS cooling systems to maintain optimal battery temperature, enhance performance, prevent overheating, and ensure safety and longevity of large-scale lithium battery energy storage systems.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
