--- a/sitemap.html
+++ b/sitemap.html
@@ -118,7 +118,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>
@@ -191,7 +191,7 @@
 <ul>
 <li><a href="#" title="">  Solar Panels</a></li>
 <!-- Two -->
-<li><a href="lithium-batteries-lines.html" title="Lithium Batteries" title=""> Lithium Batteries</a></li>
+<li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" title=""> Lithium Batteries</a></li>
 <!-- Three -->
 <li><a href="#" title=""> E-Charging stations</a></li>
 
