--- a/bess-cooling-system.html
+++ b/bess-cooling-system.html
@@ -1,38 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <head>
-<!-- Title -->
-<title>Fully Auto Solar PV Production Lines | Indygreen Technologies</title>
+   <!-- Title -->
+  <title>BESS Cooling System | Thermal Management for Energy Storage - Indygreen Technologies</title>
 
-<!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies offers advanced Fully Auto Lines for solar PV production, providing fully automated, precise, and high-efficiency solutions for solar panel and module assembly." />
+  <!-- Meta Description -->
+  <meta name="description" content="Indygreen Technologies provides advanced BESS cooling systems designed for safe, efficient, and reliable thermal management of energy storage and lithium battery systems in C&I and utility applications." />
 
-<!-- Meta Keywords -->
-<meta name="keywords" content="fully auto solar PV lines, fully automatic solar panel assembly, solar PV production equipment, automated solar module manufacturing, Indygreen Technologies, turnkey solar PV production lines, solar panel assembly solutions" />
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="BESS cooling system, energy storage cooling, thermal management system, battery cooling solutions, lithium battery cooling, liquid cooling system, C&I battery cooling, battery container cooling, ESS HVAC system, BESS temperature control" />
 
-<!-- Robots -->
-<meta name="robots" content="index, follow" />
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
-<!-- Author & Publisher -->
-<meta name="author" content="Indygreen Technologies" />
-<meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+  <!-- Author & Publisher -->
+  <meta name="author" content="Indygreen Technologies" />
+  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-<!-- Open Graph -->
-<meta property="og:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies provides Fully Auto Lines for efficient solar PV production, offering automated solutions for solar panel and module assembly." />
-<meta property="og:url" content="https://www.indygreentech.com/fully-auto-lines.html" />
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="Indygreen Technologies" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="BESS Cooling System | Thermal Management for Energy Storage" />
+  <meta property="og:description" content="Advanced BESS cooling and thermal management systems by Indygreen Technologies ensure reliable temperature control for large-scale energy storage and lithium battery systems." />
+  <meta property="og:url" content="https://www.indygreentech.com/bess-cooling-system.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Indygreen Technologies" />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Fully Auto Solar PV Production Lines | Indygreen Technologies" />
-<meta name="twitter:description" content="Advanced Fully Auto Lines by Indygreen Technologies for fully automated, precise, and high-efficiency solar panel and module assembly." />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BESS Cooling System | Thermal Management for Energy Storage" />
+  <meta name="twitter:description" content="Indygreen Technologies offers efficient BESS cooling systems for energy storage, ensuring thermal stability and battery safety for C&I and utility-scale projects." />
 
-<!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/fully-auto-lines.html" />
-
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.indygreentech.com/bess-cooling-system.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -157,7 +155,6 @@
 </li>
 
 
-
 <li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
@@ -268,9 +265,6 @@
 
 </ul>
 </li>
-
-
-
 <li><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
@@ -296,7 +290,6 @@
 </li>
 
 <!-- Three -->
-
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
 <li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
@@ -323,7 +316,6 @@
 <li>
 <a href="agv.html" title="AGV">AGV</a>
 </li>
-
 </ul>
 </li>
 
@@ -359,25 +351,23 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Fully Auto Lines</h1>
+<h1 class="title text-white">BESS Cooling System</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Solar PV" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
-<span class="ttm-bread-sep text-white">/</span>
-<a title="Solar Panel Production Lines" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar Panel Production Lines</a>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Fully Auto Lines</span>
+<span class="text-white">BESS Cooling System</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -387,17 +377,93 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/fully-auto.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Temperature Test Chamber</h5>
+            <p class="card-text text-muted">Temperature test chambers ensure lithium battery safety and reliability by simulating extreme temperature conditions. They evaluate battery performance, aging, and thermal stability under controlled heating and cooling cycles, essential for quality assurance and compliance with international testing standards.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Fully Auto Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Humidity Tester in India"><img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Humidity Tester</h5>
+            <p class="card-text text-muted">Humidity test chambers assess lithium battery durability and safety under varying humidity conditions. They simulate real-world moisture exposure to evaluate insulation, corrosion resistance, and performance stability, ensuring battery reliability and compliance with environmental testing standards.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+
+    <!-- Card 3 -->
+         <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Vibration Tester in India"><img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Vibration Tester</h5>
+            <p class="card-text text-muted">Vibration test chambers evaluate lithium battery structural integrity and performance under simulated transportation and operational vibrations. They help identify mechanical weaknesses, ensuring durability, safety, and compliance with international vibration testing standards.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
+<div class="container py-5">
+  <div class="row g-4">
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Explosion Proof Chambers in India"><img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Explosion Proof Chambers</h5>
+            <p class="card-text text-muted">Explosion-proof chambers safely test lithium batteries under extreme conditions, containing explosions or thermal runaways to protect operators and ensure accurate performance and safety evaluations.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card 1 -->
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Cycling Test Chamber in India"><img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Cycling Test Chamber</h5>
+            <p class="card-text text-muted">Cycling test chambers evaluate lithium battery life and performance by repeatedly charging and discharging cells under controlled conditions, ensuring durability, efficiency, and long-term reliability.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Card 3 -->
+  </div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
