--- a/lithium-battery-raw-material.html
+++ b/lithium-battery-raw-material.html
@@ -173,7 +173,7 @@
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
-<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS Tester</a></li>
+<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -186,7 +186,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -307,7 +307,7 @@
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
-<li><a href="bms-tester.html" title="BMS Tester">BMS Tester</a></li>
+<li><a href="bms-tester.html" title="BMS">BMS</a></li>
 </ul>
 </li>
 <li>
@@ -364,7 +364,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" title="Lithium Batteries Lines" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Raw Materials</span>
@@ -381,15 +381,14 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-cells.html" title="Lithium Cells in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lithium Cells in India" title="Lithium Cells in India"></a>
+        <a href="#" title="Lithium Cells in India"><img src="img/lithium-cell.png" class="card-img-top product-img" alt="Lithium Cells in India" title="Lithium Cells in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lithium Cells</h5>
-            <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
+            <p class="card-text text-muted">We supply high-quality lithium battery cells suitable for various applications, ensuring consistent performance, safety, and reliability for energy storage, electric vehicles, and electronic devices.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lithium-cell.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -398,15 +397,14 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bms-tester.html" title="BMS Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
+        <a href="#" title="BMS in India"><img src="img/bms.png" class="card-img-top product-img" alt="BMS in India" title="BMS in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">BMS Tester</h5>
-            <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
+            <h5 class="card-title">BMS</h5>
+            <p class="card-text text-muted">A BMS is a key component in lithium batteries, ensuring safety, monitoring performance, and extending battery life.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="bms-tester.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
