--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -177,7 +177,7 @@
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
 </a></li>
-<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
+<li class="nav-item mr-0"><a href="agv-auto-transportation.html" title="AGV Auto Transportation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV Auto Transportation
 </a></li>
 </ul>
 </li>
@@ -317,7 +317,7 @@
 <a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
 </li>
 <li>
-<a href="agv.html" title="AGV">AGV</a>
+<a href="agv-auto-transportation.html" title="AGV Auto Transportation">AGV Auto Transportation</a>
 </li>
 
 </ul>
@@ -388,7 +388,7 @@
     <div class="product-description col-lg-4">
         <ul>
           <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
-          <li>Container Transfer Method: Heavy load AGV</li>
+          <li>Container Transfer Method: Heavy load AGV Auto Transportation</li>
           <li>Pack Installation Method: Automatic Pack Insertion by Robot</li>
           <li>Required Ground Load Bearing Capacity：5000kg/m²</li>
           <li>Required Manpower:14persons (dynamic test station and spray system are not included)</li>
@@ -405,7 +405,7 @@
     <div class="product-description col-lg-4">
         <ul>
           <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
-          <li>Container Transfer Method: Heavy load AGV/ RGV/ Electric Flatcar/ Straddle</li>
+          <li>Container Transfer Method: Heavy load AGV Auto Transportation/ RGV/ Electric Flatcar/ Straddle</li>
           <li>Pack Installation Method: Electric Lifting Forklift</li>
           <li>Requiredground load bearing capacity：5000kg/m²</li>
           <li>RequiredManpower:22 -28persons (dynamic test station and spray system are not included)</li>
