--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -181,7 +181,7 @@
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
 </a></li>
-<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
+<li class="nav-item mr-0"><a href="agv-auto-transportation.html" title="AGV Auto Transportation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV Auto Transportation
 </a></li>
 </ul>
 </li>
@@ -321,7 +321,7 @@
 <a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
 </li>
 <li>
-<a href="agv.html" title="AGV">AGV</a>
+<a href="agv-auto-transportation.html" title="AGV Auto Transportation">AGV Auto Transportation</a>
 </li>
 
 </ul>
