--- a/lithium-batteries-lines.html
+++ b/lithium-batteries-lines.html
@@ -179,7 +179,7 @@
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
 </a></li>
-<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
+<li class="nav-item mr-0"><a href="agv-auto-transportation.html" title="AGV Auto Transportation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV Auto Transportation
 </a></li>
 </ul>
 </li>
@@ -319,7 +319,7 @@
 <a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
 </li>
 <li>
-<a href="agv.html" title="AGV">AGV</a>
+<a href="agv-auto-transportation.html" title="AGV Auto Transportation">AGV Auto Transportation</a>
 </li>
 
 </ul>
@@ -523,7 +523,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="bess-cooling-sytem.html" title="BESS Cooling System"><img src="img/bess-cooling.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
+        <a href="bess-cooling-system.html" title="BESS Cooling System"><img src="img/bess-cooling.png" class="card-img-top product-img" alt="BESS Cooling System in India" title="BESS Cooling System in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BESS Cooling System</h5>
@@ -531,7 +531,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="bess-cooling-sytem.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="bess-cooling-system.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -540,15 +540,15 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="agv.html" title="AGV"><img src="img/DEMO.png" class="card-img-top product-img" alt="AGV in India" title="AGV in India"></a>
+        <a href="agv-auto-transportation.html" title="AGV Auto Transportation"><img src="img/agv-auto.png" class="card-img-top product-img" alt="AGV Auto Transportation in India" title="AGV Auto Transportation in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">AGV</h5>
+            <h5 class="card-title">AGV Auto Transportation</h5>
             <p class="card-text text-muted">Wide range of supporting machines for battery manufacturing, including automation, testing chamber solutions to enhance production efficiency and quality.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="agv.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="agv-auto-transportation.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
