--- a/agv-auto-transportation.html
+++ b/agv-auto-transportation.html
@@ -1,36 +1,34 @@
 <!doctype html>
 <html lang="en">
 <head>
-   <!-- Title -->
-  <title>Lithium Cell Production Lines | Turnkey Manufacturing Solutions - Indygreen Technologies</title>
+  <head>
+<!-- Title -->
+<title>BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies provides turnkey lithium cell production lines for EVs and energy storage systems, including assembly, formation, testing, and quality control for high-efficiency lithium batteries." />
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies provides advanced BESS container assembly lines for Lithium Battery Lines systems — ensuring efficient assembly, testing, and integration of battery packs for renewable energy, industrial, and commercial applications." />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="lithium cell production line, lithium battery cell manufacturing, EV lithium cell assembly, lithium-ion cell production turnkey, lithium cell formation line, battery cell testing, lithium cell manufacturing equipment, turnkey lithium battery cell Lines" />
+<!-- Meta Keywords -->
+<meta name="keywords" content="BESS container assembly lines, Lithium Battery Lines, battery pack assembly line, BESS production line, battery testing and integration, containerized battery solutions, Indygreen Technologies" />
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/bess-container-assembly-lines.html" />
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies" />
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
+<meta property="og:description" content="High-efficiency BESS container assembly lines for lithium batteries — designed for assembly, testing, and integration of battery packs in containerized energy storage systems." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/bess-container-assembly-lines.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
+<meta property="og:site_name" content="Indygreen Technologies" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions" />
-  <meta property="og:description" content="Turnkey lithium cell production lines by Indygreen Technologies – including assembly, formation, testing, and quality control for efficient lithium battery manufacturing." />
-  <meta property="og:url" content="https://www.indygreentech.com/lithium-cell-lines.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Indygreen Technologies" />
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
+<meta name="twitter:description" content="Advanced BESS container assembly lines for Lithium Battery Lines — ensuring efficient assembly, testing, and integration for industrial, commercial, and renewable energy applications." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Lithium Cell Production Lines | Turnkey Manufacturing Solutions" />
-  <meta name="twitter:description" content="End-to-end turnkey lithium cell production line solutions – assembly, formation, testing, and quality control for high-efficiency lithium batteries." />
-
-  <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/lithium-cell-lines.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -363,14 +361,16 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Lithium Cell Lines</h1>
+<h1 class="title text-white">AGV Auto Transportation</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Lithium Cell Lines</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-white">/</span>
+<span class="text-white">AGV Auto Transportation</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -380,80 +380,21 @@
 <!-- About Us -->
  
 <div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lib-separator-lines.html" title="LIB Separator Lines in India"><img src="img/lib-seperator.png" class="card-img-top product-img" alt="LIB Separator Lines in India" title="LIB Separator Lines in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">LIB Separator Lines</h5>
-            <p class="card-text text-muted">High-precision LIB Separator Production Lines for lithium-ion batteries, delivering efficient coating, drying, slitting, and winding processes to ensure safety, stability, and performance.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lib-separator-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
+<div class="product col-lg-12">
+    <div class="product-description col-lg-8">
+        <h2><strong>AGV Auto Transportation</strong></h2> <br>
+        <img src="img/automatic-bess-line.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
     </div>
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Giga Factories</h5>
-            <p class="card-text text-muted">End-to-end solutions for Battery Giga Factories, including turnkey production lines, automation, testing, and energy storage integration to support large-scale lithium-ion manufacturing.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="giga-factories.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
+    <div class="product-description col-lg-4">
+        <ul>
+          <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
+          <li>Container Transfer Method: Heavy load AGV Auto Transportation</li>
+          <li>Pack Installation Method: Automatic Pack Insertion by Robot</li>
+          <li>Required Ground Load Bearing Capacity：5000kg/m²</li>
+          <li>Required Manpower:14persons (dynamic test station and spray system are not included)</li>
+        </ul>
     </div>
-
-    <!-- Card 3 -->
-     <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Lab/Pilot Lines</h5>
-            <p class="card-text text-muted">Flexible Lab and Pilot Lines for lithium-ion battery R&D and small-scale production, enabling testing, prototyping, and process optimization with precision and scalability.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lab-pilot-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
-
-
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-        <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lithium Cell Raw Materials in India" title="Lithium Cell Raw Materials in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Lithium Cell Raw Materials</h5>
-            <p class="card-text text-muted">Premium Lithium Cell Raw Materials including cathode, anode, electrolyte, and separator solutions. Ensuring high energy density, safety, and reliability for advanced battery manufacturing.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="lithium-cell-raw-materials.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
 </div>
   <!-- Footer -->
 <footer class="py-4">
