--- a/bess-cooling-system.html
+++ b/bess-cooling-system.html
@@ -178,7 +178,7 @@
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
 </a></li>
-<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
+<li class="nav-item mr-0"><a href="agv-auto-transportation.html" title="AGV Auto Transportation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV Auto Transportation
 </a></li>
 </ul>
 </li>
@@ -314,7 +314,7 @@
 <a href="bess-cooling-system.html" title="BESS Cooling System">BESS Cooling System</a>
 </li>
 <li>
-<a href="agv.html" title="AGV">AGV</a>
+<a href="agv-auto-transportation.html" title="AGV Auto Transportation">AGV Auto Transportation</a>
 </li>
 </ul>
 </li>
@@ -381,11 +381,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <a href="#" title="75KW Chiller in India"><img src="img/75-kw.png" class="card-img-top product-img" alt="75KW Chiller in India" title="75KW Chiller in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Temperature Test Chamber</h5>
-            <p class="card-text text-muted">Temperature test chambers ensure lithium battery safety and reliability by simulating extreme temperature conditions. They evaluate battery performance, aging, and thermal stability under controlled heating and cooling cycles, essential for quality assurance and compliance with international testing standards.</p>
+            <h5 class="card-title text-center">75KW Chiller</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -397,11 +396,10 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Humidity Tester in India"><img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
+        <a href="#" title="90KW Chiller in India"><img src="img/90kw.png" class="card-img-top product-img" alt="90KW Chiller in India" title="90KW Chiller in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Humidity Tester</h5>
-            <p class="card-text text-muted">Humidity test chambers assess lithium battery durability and safety under varying humidity conditions. They simulate real-world moisture exposure to evaluate insulation, corrosion resistance, and performance stability, ensuring battery reliability and compliance with environmental testing standards.</p>
+            <h5 class="card-title text-center">90KW Chiller</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -413,11 +411,10 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Vibration Tester in India"><img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <a href="#" title="XFreeCooling Dual-Circuit Chiller in India"><img src="img/xfree-cooling.png" class="card-img-top product-img" alt="XFreeCooling Dual-Circuit Chiller in India" title="XFreeCooling Dual-Circuit Chiller in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Vibration Tester</h5>
-            <p class="card-text text-muted">Vibration test chambers evaluate lithium battery structural integrity and performance under simulated transportation and operational vibrations. They help identify mechanical weaknesses, ensuring durability, safety, and compliance with international vibration testing standards.</p>
+            <h5 class="card-title text-center">XFree Cooling Dual - Circuit Chiller</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -432,11 +429,10 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Explosion Proof Chambers in India"><img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India"></a>
+        <a href="#" title="Door Mounted Chiller in India"><img src="img/door-mounted.png" class="card-img-top product-img" alt="Door Mounted Chiller in India" title="Door Mounted Chiller in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Explosion Proof Chambers</h5>
-            <p class="card-text text-muted">Explosion-proof chambers safely test lithium batteries under extreme conditions, containing explosions or thermal runaways to protect operators and ensure accurate performance and safety evaluations.</p>
+            <h5 class="card-title text-center">Door Mounted Chiller</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -447,11 +443,11 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cycling Test Chamber in India"><img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India"></a>
+        <a href="#" title="Horizontal Embedded Chiller in India"><img src="img/hoizon.png" class="card-img-top product-img" alt="Horizontal Embedded Chiller in India" title="Horizontal Embedded Chiller in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Cycling Test Chamber</h5>
-            <p class="card-text text-muted">Cycling test chambers evaluate lithium battery life and performance by repeatedly charging and discharging cells under controlled conditions, ensuring durability, efficiency, and long-term reliability.</p>
+            <h5 class="card-title text-center">Horizontal Embedded Chiller</h5>
+
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -462,6 +458,19 @@
 
 
     <!-- Card 3 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Ultra-Thin Dehumidifier in India"><img src="img/ultra-thin.png" class="card-img-top product-img" alt="Ultra-Thin Dehumidifier in India" title="Ultra-Thin Dehumidifier in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">Ultra - Thin Dehumidifier</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
   <!-- Footer -->
