--- a/dum.html
+++ b/dum.html
@@ -307,6 +307,6 @@
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
 </a></li>
-<li class="nav-item mr-0"><a href="agv.html" title="AGV" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV
+<li class="nav-item mr-0"><a href="agv-auto-transportation.html" title="AGV Auto Transportation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> AGV Auto Transportation
 </a></li>
 </ul>-->
