--- a/agv-auto-transportation.html
+++ b/agv-auto-transportation.html
@@ -380,19 +380,33 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-description col-lg-8">
-        <h2><strong>AGV Auto Transportation</strong></h2> <br>
-        <img src="img/automatic-bess-line.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12">
+        <img src="img/agv-inner.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
+        <h5 class="text-center">65T Heavy Load AGV Structure</h5>
     </div>
-    <div class="product-description col-lg-4">
-        <ul>
-          <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
-          <li>Container Transfer Method: Heavy load AGV Auto Transportation</li>
-          <li>Pack Installation Method: Automatic Pack Insertion by Robot</li>
-          <li>Required Ground Load Bearing Capacity：5000kg/m²</li>
-          <li>Required Manpower:14persons (dynamic test station and spray system are not included)</li>
-        </ul>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>AGV Auto Transportation</strong></h2> <br>
+        <table>
+  <tr><th>No.</th><th>Specification</th><th>Details</th></tr>
+  <tr><td>1</td><td>Vehicle Size (L×W×H), mm</td><td>≤8000 × 2200 × 800mm</td></tr>
+  <tr><td>2</td><td>Navigation Method</td><td>QR Code + Laser</td></tr>
+  <tr><td>3</td><td>Control Method</td><td>Automatic Operation + Manual Remote Control</td></tr>
+  <tr><td>4</td><td>Rated Load</td><td>65000 Kg</td></tr>
+  <tr><td>5</td><td>AGV Dead Weight</td><td>20000 Kg</td></tr>
+  <tr><td>6</td><td>Maximum Running Speed, m/min</td><td>Speed is adjustable within 0–30 m/min</td></tr>
+  <tr><td>7</td><td>Positioning and Stop Accuracy (navigation and parking)</td><td>±10 mm</td></tr>
+  <tr><td>8</td><td>Mode of Movement</td><td>Forward, backward, lateral movement, self-rotation</td></tr>
+  <tr><td>9</td><td>Slope Climbing Capability / Ground Flatness</td><td>≤3°</td></tr>
+  <tr><td>10</td><td>Working Noise, dB</td><td>≤75</td></tr>
+  <tr><td>11</td><td>Communication Method</td><td>Wireless AP, Wireless Ethernet</td></tr>
+  <tr><td>12</td><td>Alarm Form</td><td>Audio and Visual Alarms</td></tr>
+  <tr><td>13</td><td>Battery Type</td><td>Lithium Battery</td></tr>
+  <tr><td>14</td><td>Battery Capacity</td><td>No less than 210Ah 96V</td></tr>
+  <tr><td>15</td><td>Operation Voltage</td><td>DC 96V</td></tr>
+  <tr><td>16</td><td>Charging Method</td><td>Online automatic charging for 24-hour operation; manual charging also available.</td></tr>
+  <tr><td>17</td><td>Safety Protection System</td><td>Non-contact safety anti-collision, buzzer (adjustable 30–60 dB), indicating lamp, dual-circuit emergency stop button</td></tr>
+</table>
     </div>
 </div>
 </div>
