--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Your browser does not support the video tag.
 <!-- tag-line-marqies -->
 <div class="tag-line-marquee align-self-center pt-1 pb-1">
 <marquee attribute_name="attribute_value"....more attributes scrollamount="15">
-<span class="text-white mb-0 d-block text capitalize font-weight-bold">Turnkey Solutions for Solar PV Production Lines, PV Raw Materials, Lithium Battery Assembly Lines 
+<span class="text-white mb-0 d-block text capitalize font-weight-bold">Turnkey Solutions for Solar PV Production Lines, PV Raw Materials and Lithium Battery Assembly Lines 
 </span>
 </marquee>
 </div>
