--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ Your browser does not support the video tag.
 <div class="about__right">
 <div class="about__info pb-20">
 <div class="section-2__wrapper mb-30">
-<h1 class="section__title-sd">About INDYGREEN TECHNOLOGIES</h1>
+<h1 class="section__title-sd">About INDYGREEN TECHNOLOGIES</h1> <br>
 </div>
 <p>INDYGREEN TECHNOLOGIES is the brainchild of a research scholar and powered by experienced professionals with over 15 years of expertise in renewable energy solutions. As a dynamic and forward-looking company, we are committed to bridging the global energy deficit by promoting green, clean, sustainable, and renewable energy sources. Our vision is to contribute to a greener planet for future generations.</p>
 
