--- a/index.html
+++ b/index.html
@@ -661,7 +661,10 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="imghvr1-content">
 <h3 class="wt-title"><a href="#">Universal Cut Cells MBB Tabber Stringer</a></h3>
 <p class="mb-3 d-block">Advanced tabber stringer ensuring precision interconnection of cut cells with MBB technology.</p>
-<a href="#" class="site-button-link text-white">Read More</a>
+<div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-custom text-center" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+
+          </div>
 </div>
 </figcaption>
 </div>
